--- a/src/styles/main-media-headerone.less
+++ b/src/styles/main-media-headerone.less
@@ -125,7 +125,7 @@
   
   
   
-@media (min-width: 300px) and (max-width: 450px) {
+@media all and (max-width: 450px) {
     body {
         header {
             .headerOne {
