--- a/src/styles/main-media-headertwo.less
+++ b/src/styles/main-media-headertwo.less
@@ -27,7 +27,7 @@
         }
     }  
 }
-@media (min-width: 300px) and (max-width: 374px) {
+@media all and (max-width: 374px) {
     body {
         header {
             .headerTwo {
