--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -68,8 +68,16 @@
 //   color: #ffd000;
 // }
 
+/* menu */
 
 
+ /* main*/
+@background_main_aa: #f5f6fa;
+@color_black_main: #222222;
+@color_white_main: #f5f6fa;
+@color_yellow_main: #ffd000;
+@color_blue_main: #45698b;
+@background_linear_main: #dcdde1;
 
 
 * {
