--- a/src/styles/main-headerone.less
+++ b/src/styles/main-headerone.less
@@ -28,36 +28,28 @@ body {
             width: 100%;
             // max-width: 1260px;
             width: 100vw;
-            background: #45698b;
-            // padding-left: 15px; //
-            // padding-right: 15px; //
-            // border-bottom: 2px solid #45698b;
+            background: @color_blue_main;
             padding: 0px 15px 0px 15px;
             // position: relative;
             .wrapper {
-                // background: yellowgreen;
                 display: flex;
                 // width: 60%;
                 justify-content: space-between;
                 margin-left: -5%;
                 min-height: 1px;
-                // background: rgb(255, 0, 119);
                 .mobile-menu {
                     max-width: 530px;
                     // width: 100%;
-                    // background: rgb(85, 236, 92);
                     list-style: none;
-                    // text-transform: uppercase;
                     padding: 0;
                     display: flex;
                     justify-content: space-between;
-                    // justify-content: flex-start;
                     .mobile-menu-li {
                         .mobile-menu-a_one {
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: 18px;
-                            color: #f5f6fa;
+                            font-size: @font-size_main;
+                            color: @color_white_main;
                             text-decoration: none;
                             padding: 9px 13px 9px 13px;
                             // background:#222;
@@ -66,8 +58,8 @@ body {
                         .mobile-menu-a_two {
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: 18px;
-                            color: #f5f6fa;
+                            font-size: @font-size_main;
+                            color: @color_white_main;
                             text-decoration: none;
                             padding: 9px 13px 9px 13px;
                             // background:#222;
@@ -75,19 +67,18 @@ body {
                         }
                         .mobile-menu-a_one:hover {
                             transition: 0.5s linear;
-                            color:  #ffd000;  
+                            color: @color_yellow_main;  
                         }
                         .mobile-menu-a_two:hover {
                             transition: 0.5s linear;
-                            color:  #ffd000;  
+                            color: @color_yellow_main;  
                         }
                     }
                 }
             }
             .language_selection {
-                // background: #222;///////////55555
-                width: 210px;////////55555555
-                height: 50px;///////555555555
+                width: 210px;
+                height: 50px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -115,16 +106,14 @@ body {
                     padding: 0 6px;
                 }
                 input:checked + label {
-                    color: #f5f6fa;
+                    color: @color_white_main;
                     font-size: 0px;
                 }
                 label {
-                    width: 67px;/////////555555
-                    height: 39px;//////////555555
-                    // border: 1px solid #45698b;
+                    width: 67px;
+                    height: 39px;
                     padding: 0 6px;
                     cursor: pointer;
-                    // border: 1px solid #497285;  /////
                     // background:  #222;/////////////////////////////////
                     border-radius: 3px;
                     display: inline-block;
@@ -153,34 +142,22 @@ body {
                     transition: 0.8s linear;
                 }
                 label:hover  {
-                    // border: 1px solid #ffd000;
                     border: none;
                     background-size: 100%;
-                    // background-size: cover;
                     transition: 0.8s linear;
                 }
             }
             .shopping_basket {
                 padding: 0;
                 margin: 0;
-                // background: #263942;
                 height: 50px;
                 min-width: 1px;
-                // display: flex;
-                // align-items: center;
-                // justify-content: space-between;
                 margin-right: -5%;
                 .cart {
-                    // border: 1px solid #555;
-                    // border-radius: 3px;
-                    // border: solid 1px #45698b;
-                    // background: #222;
                     padding: 2px 5px 2px 5px;
                     margin: 0px 0px;
-                    // display: flex;
-                    // justify-content: space-between;
                     transition: 0.5s linear;
-                    .shopping-backet {
+                    .a_cart {
                         display: flex;
                         justify-content: center;
                         text-decoration: none;
@@ -189,10 +166,7 @@ body {
                             margin: 0;
                             height: 44px;
                             width: 54px;
-                            // background: #222;
                             padding: 5px 0px 5px 5px;
-                            // border: 1px solid #f5f6fa;
-                            // border: 1px solid #2d455c;
                             border-radius: 3px;
                             filter: contrast(100%);
                             filter: brightness(1300%);
@@ -203,42 +177,28 @@ body {
                             margin: 0;
                             height: 44px;
                             width: 134px;
-                            // border: 1px solid #497285;
-                            // background:  #00fb00;/////////////////полоска между
                             display: flex;
                             flex-wrap: wrap;
-                            color: #f5f6fa;
+                            color: @color_white_main;
                             text-decoration: none;
                             font-family: 'Roboto', sans-serif;
-                            font-size: 16px;
+                            font-size: @font-size_main - 2px;
                             font-weight: 400;
                             text-transform: uppercase;
-                          
-
                             margin-left: 5px;
-                            // flex-direction: column;
-                            // align-items: center;
-                            // float: left;
                             transition: 0.5s linear;
                             .cart-block-one {
                                 padding: 2px;
                                 margin: 1px 0px 0px 0px;
                                 height: 20px;
                                 width: 130px;
-                                // border: 1px solid #497285;
-                                // border-radius: 2px;
                                 transition: 1.0s linear;
-                                // background: #222;
-                                // background: #45698b;
-                                // box-shadow: inset 0 0 40px #6f9cc5;
                                 display: flex;
-                                // flex-direction: column;
                                 align-items: left;
-                                // background: rgb(10, 93, 104);
                                 overflow: hidden;
                                 transition: 0.5s linear;
                                 span {
-                                    color: #f5f6fa;
+                                    color: @color_white_main;
                                     transition: 0.5s linear;
                                 }
                             }
@@ -247,37 +207,30 @@ body {
                                 margin: 1px 0px 0px 0px;
                                 height: 20px;
                                 width: 130px;
-                                // border: 1px solid #497285;
-                                // border-radius: 2px;
                                 transition: 1.0s linear;
-                                // background: #222;
-                                // background: #45698b;
-                                // box-shadow: inset 0 0 40px #6f9cc5;
                                 display: flex;
-                                // flex-direction: column;
                                 align-items: left;
-                                // background: rgb(10, 93, 104);
                                 overflow: hidden;
                                 transition: 0.5s linear;
                                 span {
-                                    color: #f5f6fa;
+                                    color: @color_white_main;
                                     transition: 0.5s linear;
                                 }
                             }
                         }
                     }
                 }
-                .cart:hover .shopping-backet .cart-block .cart-block-one span {
+                .cart:hover .a_cart .cart-block .cart-block-one span {
                     cursor: pointer;
-                    color: #ffd000; 
+                    color: @color_yellow_main; 
                     transition: 0.5s linear;
                 }
-                .cart:hover .shopping-backet .cart-block .cart-block-two span {
+                .cart:hover .a_cart .cart-block .cart-block-two span {
                     cursor: pointer;
-                    color: #ffd000; 
+                    color: @color_yellow_main; 
                     transition: 0.5s linear;
                 }
-                .cart:hover .shopping-backet .img_basket {
+                .cart:hover .a_cart .img_basket {
                     cursor: pointer;
                     filter: brightness(250%);   
                     transition: 0.5s linear;
