--- a/src/styles/main-media-headertwo.less
+++ b/src/styles/main-media-headertwo.less
@@ -14,7 +14,8 @@
                     #search_search {
                         .search-box {
                             .search-txt {
-                                min-width: 310px;  
+                                min-width: 310px;
+                                font-size: @font-size_main - 1px;  
                             }
                             .search-btn {
                                 width: 55px; 
@@ -42,7 +43,8 @@
                     #search_search {
                         .search-box {
                             .search-txt {
-                                min-width: 250px; 
+                                min-width: 250px;
+                                font-size: @font-size_main - 2px; 
                             }
                             .search-btn {
                                 width: 45px; 
