--- a/src/styles/main-media-menu-block.less
+++ b/src/styles/main-media-menu-block.less
@@ -84,6 +84,11 @@
         }
     }
 } 
+
+
+
+
+
 @media (min-width: 1251px) and (max-width: 1260px) {
     body {
         .main-menu {
@@ -1941,7 +1946,7 @@ body {
 }
   
   
-  
+/////////////////////////////////////////////  
   
 @media all and (max-width: 690px) {
     body {
@@ -1959,7 +1964,7 @@ body {
                     line-height: 30px;
                     font-family: 'Roboto', sans-serif;
                     font-weight: 400;
-                    font-size: 16px;
+                    font-size: 17px;
                     transition: linear 0.5s;
                     .fa-bars {
                         line-height: 25px;
