--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -68,16 +68,28 @@
 //   color: #ffd000;
 // }
 
-/* menu */
+/* menu-headerone */
+@font-size_main: 17px;
 
 
- /* main*/
-@background_main_aa: #f5f6fa;
+
+
+
+ /* main-content-block*/
+@font-size_main: 17px;
+@background_main: #f5f6fa;
 @color_black_main: #222222;
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
 @color_blue_main: #45698b;
 @background_linear_main: #dcdde1;
+
+/*  main-footer  */
+@font-size_main: 17px;
+
+
+
+
 
 
 * {
@@ -89,12 +101,8 @@
 
 @import url('main-headerone.less');
 @import url('main-headertwo.less');
-@import url('main-header-breadcrumbs.less');
-// @import url('main-headerthree.less');
 @import url('main-menu-block.less');
-
 @import url('main-content-block.less');
-
 @import url('main-footer.less');
 
 
@@ -105,10 +113,11 @@
 
 
 
-// @import url('main-media.less');
+
 @import url('main-media-headerone.less');
 @import url('main-media-headertwo.less');
-// @import url('main-media-headerthree.less');
 @import url('main-media-menu-block.less');
+@import url("main-media-content-block.less");
+@import url("main-media-footer.less");
 
 
