--- a/src/styles/main-headertwo.less
+++ b/src/styles/main-headertwo.less
@@ -33,7 +33,7 @@ body {
             height: 270px;
             align-items: center;
             justify-content: center;
-            background: #f5f6fa;
+            background: @color_white_main;
             .container_slider_css {
                 margin: 0;
                 padding: 0;
@@ -94,10 +94,10 @@ body {
                             width: 300px;
                             height: 170px;
                             border-radius: 50%;
-                            border-left: 26px solid #45698b;
-                            border-right: 26px solid #45698b;
-                            border-bottom: 6px solid #ffd000;
-                            border-top: 6px solid #ffd000;
+                            border-left: 26px solid @color_blue_main;
+                            border-right: 26px solid @color_blue_main;
+                            border-bottom: 6px solid @color_yellow_main;
+                            border-top: 6px solid @color_yellow_main;
                             margin: 50px 0 0 30px;
                             // overflow: hidden;
                             position: relative;////////////////////////////////
@@ -114,10 +114,10 @@ body {
                             width: 100%;
                             height: 100%;
                             border-radius: 50%;
-                            border-left: 13px solid  #ffd000;
-                            border-right: 13px solid  #ffd000;
-                            border-bottom: 3px solid #45698b;
-                            border-top: 3px solid #45698b;
+                            border-left: 13px solid  @color_yellow_main;
+                            border-right: 13px solid  @color_yellow_main;
+                            border-bottom: 3px solid @color_blue_main;
+                            border-top: 3px solid @color_blue_main;
                             margin: -3px 0 0 -13px; 
                         }               
                     }
@@ -137,15 +137,15 @@ body {
                         justify-content: center;
                         width: 100%;  
                         .search-txt {
-                            color: #222;
+                            color: @color_black_main;
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
                             font-size: 18px;
                             float: left;
                             padding: 5px;
-                            font-size: 17px;
+                            font-size: @font-size_main;
                             border-radius: 5px;
-                            border: 2px solid #45698b;
+                            border: 2px solid @color_blue_main;
                             background-color: #fcf8ec;////цвет под логотип
                             min-width: 380px; 
                             text-align: center;   
@@ -156,9 +156,9 @@ body {
                             float: left;
                             padding: 5px;
                             font-size: 17px;
-                            color: #45698b;
+                            color: @color_blue_main;
                             border-radius: 5px;
-                            border: 2px solid #45698b;
+                            border: 2px solid @color_blue_main;
                             background-color: #fcf8ec;////цвет под логотип
                             margin-left: 1px;
                             transition: linear 0.5s;
@@ -169,8 +169,8 @@ body {
                             }
                         }
                         .search-btn:hover {
-                            background-color: #ffd000;
-                            color: #45698b;
+                            background-color: @color_yellow_main;
+                            color: @color_blue_main;
                             cursor: pointer;
                             transition: linear 0.5s;
                         }
