--- a/src/styles/main-media-footer.less
+++ b/src/styles/main-media-footer.less
@@ -1,4 +1,6 @@
 
+@media all and (max-width: 598px) {
+@font-size_main: 15px;
 
 body {
     display: flex;
@@ -22,8 +24,10 @@ body {
             flex-wrap: wrap;
             .box {
                 flex: 1;
-                margin: 5px 15px;
-                padding: 10px 20px;
+                // margin: 5px 15px;
+                // padding: 10px 20px;
+                margin: 0px 0px;///////////////////////////88788777
+                padding: 5px 10px;///////////////////////////88788777
                 min-width: 300px;    
             }
             .box:hover h4 {
@@ -58,7 +62,7 @@ body {
                 padding-bottom: 10px;
             }
             .box .social {
-                min-width: 280px;
+                min-width: 270px;
                 display: flex;
                 flex-wrap: wrap;
             }
@@ -163,3 +167,169 @@ body {
         }
     }
 }
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
